--- a/css/style.css
+++ b/css/style.css
@@ -8254,6 +8254,22 @@ a {
     content: none;
   }
 }
+@media screen and (min-width: 769px) {
+  .lower-facility_d .facility .sec__support .support__list__item:nth-child(odd):last-child {
+    position: relative;
+  }
+  .lower-facility_d .facility .sec__support .support__list__item:nth-child(odd):last-child:after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 3px;
+    background-color: #cae8f6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(100%, -100%);
+  }
+}
 .lower-facility_d .facility .sec__support .support__list__item:nth-child(even) {
   padding-left: 5%;
   padding-right: 1.75%;
