--- a/sass/layout/_facility.scss
+++ b/sass/layout/_facility.scss
@@ -418,6 +418,23 @@
                   content: none;
                 }
               }
+              @include mixins.mq-up(md) {
+                &:last-child {
+                  position: relative;
+  
+                  &:after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                    height: 3px;
+                    background-color: #cae8f6;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    transform: translate(100%,-100%);
+                  }
+                }
+              }
             }
             &:nth-child(even) {
               padding-left: 5%;
